--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "cross-env": "^7.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "serialport": "^10.5.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.5",
